<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/brn_setting_reset_game"
        style="@style/AppTheme.MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_reset_progress" />

    <Button
        android:id="@+id/btn_settings_rate"
        style="@style/AppTheme.MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_rate_app" />

    <Button
        android:id="@+id/btn_settings_help"
        style="@style/AppTheme.MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/how_help" />

    <Button
        android:id="@+id/btn_settings_about"
        style="@style/AppTheme.MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_about" />

    <Button
        android:id="@+id/btn_settings_thanks"
        style="@style/AppTheme.MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_thanks" />

    <Button
        android:id="@+id/btn_settings_policy"
        style="@style/AppTheme.MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_privacy_policy" />

    <Button
        android:id="@+id/btn_share"
        style="@style/AppTheme.MenuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_share" />
</LinearLayout>